gcc-14.2.0/gcc/testsuite/gdc.test/compilable/traits_getFunctionAttributes.d
version https://git-lfs.github.com/spec/v1
oid sha256:a11a085a4b93f8240d788360bcc4b5bb433977f343dbb806ebd838a45c70c458
size 6862
